--- a/scripts/markdown-link-check-config.json
+++ b/scripts/markdown-link-check-config.json
@@ -4,7 +4,7 @@
             "pattern": "^https?://localhost($|[:/].*)"
         },
         {
-            "pattern": "^.?[/][\\w].*"
+            "pattern": "^(\\.|\\.\\.)?/.*"
         }
     ]
 }
