--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -223,6 +223,7 @@ presubmits:
         - "./test/presubmit-tests.sh"
         - "--run-test"
         - "./test/e2e-tests.sh"
+        - "--run-presubmit-tests"
 
   - name: pull-knative-serving-upgrade-tests
     agent: kubernetes
