--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -61,6 +61,7 @@ tide:
     - knative/test-infra
     - knative/pkg
     - knative/caching
+    - knative/website
     labels:
     - lgtm
     - approved
