add comment explaining installing go same as kubekins-e2e

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -29,7 +29,8 @@ RUN docker-credential-gcr configure-docker
 RUN apt-get install -y uuid-runtime  # for uuidgen
 RUN apt-get install -y rubygems  # for mdl
 
-# Install go at 1.12
+# Install go at 1.12 same as how it's installed in kubekins-e2e image, reference code here:
+# https://github.com/kubernetes/test-infra/blob/1e9b5dc3de4b268aab57c9c48120aa3dcf096bc6/images/kubekins-e2e/Dockerfile#L64
 ENV GO_TARBALL "go1.12.linux-amd64.tar.gz"
 RUN rm -rf /usr/local/go && \
     wget -q "https://storage.googleapis.com/golang/${GO_TARBALL}" && \
