--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -147,6 +147,8 @@ periodics:
       cron: "5 8 * * *" # Run at 01:05PST every day (08:05 UTC)
     - performance: true
       cron: "0 1 * * *" # Run at 01:00 every day
+    - webhook-apicoverage: true
+      cron: "5 9 * * *" # Run at 02:05PST every day (09:05 UTC)
 
   knative/build:
     - continuous: true
