--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2611,6 +2611,53 @@ periodics:
       - "--profile-name=coverage_profile.txt"
       - "--cov-target=."
       - "--cov-threshold-percentage=50"
+- cron: "0 12 * * *"
+  name: ci-knative-test-infra-flakytool
+  agent: kubernetes
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/flaky-test-reporter:latest
+      imagePullPolicy: Always
+      args:
+      - "--scenario=kubernetes_execute_bazel"
+      - "--clean"
+      - "--job=$(JOB_NAME)"
+      - "--repo=github.com/knative/test-infra"
+      - "--root=/go/src"
+      - "--service-account=/etc/test-account/service-account.json"
+      - "--upload=gs://knative-prow/logs"
+      - "--timeout=50" # Avoid overrun
+      - "--" # end bootstrap args, scenario args below
+      - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
+      - "/flaky-test-reporter"
+      - "--service-account /etc/test-account/service-account.json"
+      - "--github-account /etc/github-token/token"
+      - "--slack-account /etc/slack-token/token"
+      volumeMounts:
+      - name: github-token
+        mountPath: /etc/github-token
+        readOnly: true
+      - name: slack-token
+        mountPath: /etc/slack-token
+        readOnly: true
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-west1
+    volumes:
+    - name: github-token
+      secret:
+        secretName: github-token
+    - name: slack-token
+      secret:
+        secretName: slack-token
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "0 19 * * 1"
   name: ci-knative-cleanup
   agent: kubernetes
@@ -2642,45 +2689,6 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "0 12 * * *"
-  name: ci-knative-flakytestreporter
-  agent: kubernetes
-  decorate: true
-  extra_refs:
-  - org: knative
-    repo: test-infra
-    base_ref: master
-    clone_uri: "https://github.com/knative/test-infra.git"
-  spec:
-    containers:
-    - image: gcr.io/knative-tests/test-infra/flaky-test-reporter:latest
-      imagePullPolicy: Always
-      command:
-      - "/flaky-test-reporter"
-      args:
-      - "--service-account /etc/test-account/service-account.json"
-      - "--github-account /etc/github-token/token"
-      - "--slack-account /etc/slack-token/token"
-      volumeMounts:
-      - name: test-account
-        mountPath: /etc/test-account
-        readOnly: true
-      - name: github-token
-        mountPath: /etc/github-token
-        readOnly: true
-      - name: slack-token
-        mountPath: /etc/slack-token
-        readOnly: true
-    volumes:
-    - name: test-account
-      secret:
-        secretName: test-account
-    - name: github-token
-      secret:
-        secretName: github-token
-    - name: slack-token
-      secret:
-        secretName: slack-token
 - cron: "15 9 * * *"
   name: ci-knative-backup-artifacts
   agent: kubernetes
