Webhook-APICoverage: Prow job env variable fix
This change adds an environment variable into the Webhook API Coverage
job that is required by the tool.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1929,6 +1929,8 @@ periodics:
         mountPath: /etc/test-account
         readOnly: true
       env:
+      - name: SYSTEM_NAMESPACE
+        value: knative-serving
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
