--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2662,9 +2662,9 @@ periodics:
       command:
       - "./tools/cleanup/cleanup.sh"
       args:
-      - "delete-old-gcr-images"
       - "--project-resource-yaml ci/prow/boskos/resources.yaml"
-      - "--days-to-keep 30"
+      - "--days-to-keep-images 30"
+      - "--hours-to-keep-clusters 24"
       - "--service-account /etc/test-account/service-account.json"
       - "--artifacts $(ARTIFACTS)"
       volumeMounts:
